--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,13 @@ html {
       background-color: rgba(0, 100, 256, 0.7);
     }
 
+    #worldNewsLogo{
+      width: 60px;
+      height: 40px;
+      margin-left: 2px;
+      margin-right: 5px;
+    }
+
     .custom {
       display: block;
     }
@@ -93,8 +100,8 @@ html {
     }
 
     #copyApi {
-      margin-bottom: 6px;
-      margin-left: 2px;
+      margin-bottom: 6;
+      margin-left: 2;
     }
 
     #faceBookIcon{
@@ -109,4 +116,6 @@ html {
         margin-left: 5px;
         font-size: 20px;
     }
-
+    #feedbackSubmit{
+        margin-top: 100px;
+    }
