--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,6 +116,7 @@ html {
         margin-left: 5px;
         font-size: 20px;
     }
-    #feedbackSubmit{
+    #feedbackSubmitButton{
         margin-top: 100px;
     }
+    
