--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,7 +135,7 @@ html {
       margin-bottom: 15px;
       margin-top: 0;
       font-size: 25px;
-      background-color: #0073e6;
+      background-color: #3399ff;
       color: white;
       border-radius: 5px;
     }
@@ -144,4 +144,9 @@ html {
     }
     #close{
       margin-bottom: 15px;
+    }
+    .headline_no{
+      color: orange;
+      margin-left: 30px;
+      margin-right: 5px;
     }
