--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,3 +150,60 @@ html {
       margin-left: 30px;
       margin-right: 5px;
     }
+    .Response{
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .country-nav{
+      line-height: normal;
+      height: 38px;
+      font-size: 18px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      width: 100px;
+      border-radius: 6px;
+      display: block;
+      border: 1px solid transparent;
+      background: transparent ;
+      color: #ff0080;
+      cursor: pointer;
+      padding: 8px 20px 7px 10px;
+      margin-bottom: 10px;
+      line-height: normal;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      border-radius: 2px;
+    }
+    
+    .country-nav:focus{
+      outline: none;
+    }
+    .catagory-nav{
+      line-height: normal;
+      height: 38px;
+      font-size: 18px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      width: 100px;
+      border-radius: 6px;
+      display: block;
+      border: 1px solid transparent;
+      background: transparent ;
+      color: #ff0080;
+      cursor: pointer;
+      padding: 8px 20px 7px 10px;
+      margin-bottom: 10px;
+      line-height: normal;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      border-radius: 2px;
+    }
+    
+    .catagory-nav:focus{
+      outline: none;
+    }
