--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,7 +163,7 @@ html {
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none;
-      width: 100px;
+      width: auto;
       border-radius: 6px;
       display: block;
       border: 1px solid transparent;
@@ -189,7 +189,7 @@ html {
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none;
-      width: 100px;
+      width: auto;
       border-radius: 6px;
       display: block;
       border: 1px solid transparent;
