--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,306 +1,232 @@
-console.info(`Just Select Country And Catagory than Click on 'Get News', Now your News will fetching And You can see that!`);
-
-let response = document.getElementById('response')
-response.innerHTML = `Loading...`
-newsResponse()
-
-function newsResponse() {
-
-    const country = document.getElementById('country-input')
-    const catagory = document.getElementById('catagory-input')
-    const api = "4e22589fc4ec4b18bd46a08505a59da8"
-    if (api == "") {
-        window.alert("First input Api Key")
-    } else {
-        var pattern = `https://newsapi.org/v2/top-headlines?country=${country.value}&category=${catagory.value}&apiKey=${api}`
-        var pattern2 = `https://newsapi.org/v2/top-headlines?country=${country.value}&apiKey=${api}`
-        if (catagory.value == "Top") {
-            pattern = ""
-            pattern += pattern2
-        }
-
-        console.log(pattern);
-
-        var xhr7 = new XMLHttpRequest();
-        xhr7.open('GET', `${pattern}`, true);
-        //On Progress
-
-        xhr7.onprogress = function onprogress() {
-            console.log(`We Are Sending a Request to the Server For Your ${catagory.value} News.`)
-            let response = document.getElementById('response')
-            response.innerHTML = "";
-            let spin7 = ``
-            let response7 = document.getElementById('Response')
-            response7.scrollIntoView()
-            let spinHtml7 = `
-            <div class="spinner-border text-primary" role="status">
-              <span class="sr-only">Loading...</span>
-            </div>
-            `
-            spin7 += spinHtml7
-            response7.innerHTML = spin7
-
-            let refreshMainDiv = document.getElementById('refreshMainDiv')
-            let refreshMainDivEmptyHTML = ``
-            let refreshMainDivHTML = `
-            <div id="refrash">
-              <img onclick="newsResponse()" onmouseover="refreshHover()" onmouseout="refreshHoverOut()" class="Refresh" src="refresh.png"></img>
-              <button type="button" onclick="newsClose()" class="close" id="closeNews" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <br><br>
-              <h6 class="card-subtitle mb-2 text-muted" id="refreshAlt"></h6>
-            </div>
-          `
-            refreshMainDivEmptyHTML += refreshMainDivHTML;
-            refreshMainDiv.innerHTML = refreshMainDivEmptyHTML;
-        }
-
-        //ON LOAD
-
-        xhr7.onload = function (element) {
-            if (this.status === 200) {
-                let json7 = JSON.parse(this.responseText)
-
-                let articles7 = json7.articles;
-                let response7 = document.getElementById('Response')
-
-                let totalResultsJSON = json7
-                let totalResults = document.getElementById('totalResults')
-                let totResultHTML = `
-                <h6 class="card-subtitle mb-2 text-muted my-2">Total <b>${totalResultsJSON["totalResults"]}</b> Found but we can show you <b>${articles7.length}</b> results.</h6>
-              `
-                totalResults.innerHTML = totResultHTML;
-                let newsHtml7 = "";
-                articles7.forEach(function (element, index) {
-                    if (element["content"] == null) {
-                        let news7 = `
-                    <div class="card mx-2 my-2" style="width: 32rem;">
-                    <img src="${element["urlToImage"]}" style="max-height:300px " class="card-img-top"  alt="World Custom News">
-                    <div class="card-body">
-                        <h5 class="card-title">${element["title"]}</h5>
-                        <p class="card-text" style="color:red;">Could not get this Content But You can <a id="scroll3" target="_blank" href="${element["url"]}" class="card-link">Read More Here</a></p>
-                    </div>
-                    </div>
-                        `
-                        newsHtml7 += news7;
-                    }
-
-                    else if (element["content"] == "") {
-                        let news7 = `
-                    <div class="card mx-2 my-2" style="width: 32rem;">
-                    <img src="${element["urlToImage"]}" style="max-height:300px " class="card-img-top"  alt="World Custom News">
-                    <div class="card-body">
-                        <h5 class="card-title">${element["title"]}</h5>
-                        <p class="card-text" style="color:red;">Could not get this Content But You can <a id="scroll3" target="_blank" href="${element["url"]}" class="card-link">Read More Here</a></p>
-                    </div>
-                    </div>
-                        `
-                        newsHtml7 += news7;
-                    }
-
-                    else if (element["content"] == "Subscribe Start Your Daily Mornings with Times of India Newspaper!Order Now") {
-                        let news7 = `
-                    <div class="card mx-2 my-2" style="width: 32rem;">
-                    <img src="${element["urlToImage"]}" style="max-height:300px " class="card-img-top"  alt="World Custom News">
-                    <div class="card-body">
-                        <h5 class="card-title">${element["title"]}</h5>
-                        <p class="card-text" style="color:red;">The content is written for a Bussinuss Purpose so we can't show this but You can <a href="${element["url"]}">Read More Here</a></a></p>
-                    </div>
-                    </div>
-                        `
-                        newsHtml7 += news7;
-                    }
-
-                    else {
-                        let news7 = `
-                    <div class="card mx-2 my-2" style="width: 32rem;">
-                    <img src="${element["urlToImage"]}" style="max-height:300px " class="card-img-top" alt="World Custom News">
-                    <div class="card-body">
-                        <h5 class="card-title">${element["title"]}</h5>
-                        <p class="card-text">${element["content"]}</p>
-                        <a href="${element["url"]}" class="btn btn-primary">Read More</a>
-                    </div>
-                    </div>
-                  `
-
-                        newsHtml7 += news7;
-                    }
-                })
-                response7.innerHTML = newsHtml7;
-
-            }
-            else {
-                console.error(`${this.status} error occured!!! We will try to solve This Error!!!`)
-                let response7 = document.getElementById('Response')
-                response7.innerHTML = `${this.status} error occured!!! We will try to solve This Error!!!.`
-                let totalResults = document.getElementById('totalResults')
-                totalResults.innerHTML = ""
-                let response = document.getElementById('response')
-                response.innerHTML = ""
-            }
-        }
-        xhr7.send()
-        setTimeout(() => {
-            window.scrollTo(0, 10);
-        }, 1000);
-    }
-}
-function feedbackResponse() {
-    var feedbackResponseDiv = document.getElementById('feedbackResponseDiv')
-    let feedbackResponseDivHTML = `
-          <hr style="height: 1px; background-color: black;">
-          <button type="button" onclick="feedBackClose()" class="close" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-          </button> 
-            <h3 class="card-subtitle mb-2 text-muted my-2">Feedback:</h3>
-            <div class="input-group input-group-sm mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Feedback</span>
-              </div>
-              <textarea id="feedBackInput" type="text" class="form-control" style="min-height: 50px; min-width: 200px; max-height: 200px; height: 60px;" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" placeholder="Enter Your Feedback Here"></textarea>
-              <br><br>
-              <button class="btn btn-primary btn-sm" id="feedbackSubmitButton" onclick="feedBackSubmit()">Submit Feedback</button>
-            </div>
-            <br>
-            <h5 id="feedbackResponseValue" class="card-subtitle mb-2 text-muted my-2"></h5>
-            <br>
-            <button type="button" id="scroll2" class="btn btn-primary btn-sm" onclick="lastFeedBack()">Last Feedback</button>
-            <br><br>
-        `
-    feedbackResponseDiv.innerHTML = feedbackResponseDivHTML
-    var scroll2 = document.getElementById('scroll2')
-    scroll2.scrollIntoView({ behavior: 'smooth' })
-}
-function feedBackSubmit() {
-    var feedBackInput = document.getElementById('feedBackInput').value
-    var feedbackResponseValue = document.getElementById('feedbackResponseValue')
-    if (feedBackInput == "") {
-        console.error("First Input Feedback")
-    }
-    else if (feedBackInput.length < 3) {
-        console.error("Your Feedback is not sufficient!")
-    }
-    else {
-        feedbackResponseValue.innerHTML = `
-            Your Feedback:- ${feedBackInput}
-          `
-        localStorage.setItem('Feedback', feedBackInput)
-        window.alert("Thanks For Your Feedback")
-    }
-}
-function lastFeedBack() {
-    var feedbackResponseValue = document.getElementById('feedbackResponseValue')
-    var lastFeedBackValue = localStorage.getItem('Feedback')
-    if (lastFeedBackValue === null) {
-        lastFeedBackValue = "You had not add any Feedback Last time!"
-    }
-    feedbackResponseValue.innerHTML = `
-          Your Last Feedback was:- ${lastFeedBackValue}
-        `
-}
-function feedBackClose() {
-    var feedbackResponseDiv = document.getElementById('feedbackResponseDiv')
-    feedbackResponseDiv.innerHTML = ""
-    let scroll = document.getElementById('MadeBy');
-    scroll.scrollIntoView({ behavior: "smooth" })
-}
-function refreshHover() {
-    let refreshAlt = document.getElementById('refreshAlt')
-    refreshAlt.innerHTML = "Refresh ?"
-}
-function refreshHoverOut() {
-    let refreshAlt = document.getElementById('refreshAlt')
-    refreshAlt.innerHTML = ""
-}
-function copyApiKey() {
-    var apiInput = document.getElementById('Apikey-input')
-    apiInput.select()
-    apiInput.setSelectionRange(0, 999999999)
-    document.execCommand('copy')
-    setTimeout(() => {
-        alert("API key Copied: " + apiInput.value)
-    }, 500);
-    console.info("API key Copied: " + apiInput.value)
-}
-
-function mainHome() {
-    let scroll5 = document.getElementById('scrollIsThis');
-    scroll5.scrollIntoView({ behavior: 'smooth' })
-}
-
-function newsClose() {
-    let confirm = window.confirm("Do You want to Close all News?")
-    if (confirm === false) {
-
-    } else {
-        let response7 = document.getElementById('Response')
-        let refreshMainDiv = document.getElementById('refreshMainDiv')
-        let totalResults = document.getElementById('totalResults')
-        totalResults.innerHTML = ""
-        refreshMainDiv.innerHTML = ""
-        response7.innerHTML = ""
-
-        let response = document.getElementById('response');
-        response.innerHTML = `If you want to read news so select a country!`
-
-        let errorDiv = document.getElementById('errorDiv')
-        errorDiv.innerHTML = ""
-
-        let scroll5 = document.getElementById('scrollIsThis');
-        scroll5.scrollIntoView({ behavior: 'smooth' })
-    }
-}
-
-
-function headlineResponse() {
-    var headlineMarDiv = document.getElementById('headlineMarDiv')
-
-    const xhr8 = new XMLHttpRequest();
-
-    xhr8.open('GET', `https://newsapi.org/v2/top-headlines?country=in&apiKey=4e22589fc4ec4b18bd46a08505a59da8`, true);
-
-    //On Progress
-    xhr8.onprogress = function onprogress() {
-        headlineMarDiv.innerHTML = `
-            <div class="spinner-border text-primary" role="status">
-              <span class="sr-only">Loading...</span>
-            </div>
-        `
+html {
+      scroll-behavior: smooth;
     }
 
-    //ON LOAD
-    xhr8.onload = function (element) {
-        if (this.status === 200) {
-            let json8 = JSON.parse(this.responseText)
-
-            let articles8 = json8.articles;
-            // console.log(articles8)
-
-            let i = -1
-
-
-            articles8.forEach(element => {
-                let title = articles8[++i].title;
-                // console.log(title);
-
-                headlineMarDiv.innerHTML = `
-                    <marquee class="headline_marquee" scrollamount="10"> <strong class="headline_no"> 1. </strong> ${articles8[0].title}  <strong class="headline_no"> 2. </strong> ${articles8[1].title}  <strong class="headline_no"> 3. </strong> ${articles8[2].title}  <strong class="headline_no"> 4. </strong> ${articles8[3].title}  <strong class="headline_no"> 5. </strong> ${articles8[4].title}  <strong class="headline_no"> 6. </strong> ${articles8[5].title}  <strong> 7. </strong class="headline_no"> ${articles8[6].title}  <strong class="headline_no"> 8. </strong> ${articles8[7].title}  <strong class="headline_no"> 9. </strong> ${articles8[8].title}  <strong class="headline_no"> 10. </strong> ${articles8[9].title}  <strong class="headline_no"> 11. </strong> ${articles8[10].title}  <strong class="headline_no"> 12. </strong> ${articles8[11].title}  <strong class="headline_no"> 13. </strong> ${articles8[12].title}  <strong class="headline_no"> 14. </strong> ${articles8[13].title}  <strong class="headline_no"> 15. </strong> ${articles8[14].title}  </marquee><button type="button" onclick="headlineClose()" id="close" class="close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                `
-
-            });
-
-
-        }
-
+    ::-webkit-scrollbar {
+      width: 20px;
     }
 
-    xhr8.send()
-}
+    ::-webkit-scrollbar-track {
+      box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4);
+      border: 3px solid rgba(0, 0, 0, 0.3);
+      border-radius: 20px;
+    }
 
-function headlineClose() {
-    var headlineMarDiv = document.getElementById('headlineMarDiv')
+    ::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 100, 256, 0.5);
+      border-radius: 23px;
+    }
 
-    headlineMarDiv.innerHTML = ""
-}
+    ::-webkit-scrollbar-thumb:hover {
+      transition: 1s;
+      background-color: rgba(0, 100, 256, 0.7);
+    }
+
+    #worldNewsLogo{
+      width: 20px;
+      height: 35px;
+      border-radius: 100px;
+      margin-left: 0px;
+      margin-right: 5px;
+    }
+
+    .custom {
+      display: block;
+    }
+
+    .customTit {
+      font-weight: 500;
+    }
+
+    .customButton {
+      margin-top: 4px;
+      margin-left: 5px;
+      width: 70px;
+      text-align: center;
+      height: 30px;
+    }
+
+    .Apikey-input,
+    .placeholder {
+      border-radius: 3px;
+      text-align: center;
+      transition: 1s;
+      width: 300px;
+      margin-top: 2px;
+    }
+
+    .Apikey-input:focus {
+      transition: 1s;
+      color: red;
+      border: 1px solid blue;
+    }
+
+    .link {
+      margin-top: 30px;
+      margin-bottom: 5px;
+    }
+
+    .Refresh {
+      transition: 0.6s;
+      width: 30px;
+    }
+
+    .Refresh:hover {
+      transform: rotate(360deg);
+      transition: 1s;
+      cursor: pointer;
+    }
+
+    .nav-link {
+      cursor: pointer;
+    }
+
+    #navbar {
+      position: fixed;
+      top: 0;
+      z-index: 1000;
+    }
+
+    #MadeBy {
+      margin-top: 10px;
+      margin-bottom: 0;
+    }
+
+    .feedbackResponseDiv {
+      display: block;
+    }
+
+    .errorDiv {
+      color: Red;
+    }
+
+    #copyApi {
+      margin-bottom: 6;
+      margin-left: 2;
+    }
+
+    #faceBookIcon{
+        width: 35px;
+        height: 35px;
+    }
+    .facebook{
+        display: flex;
+    }
+    #facebook-link{
+        margin-top: 1px;
+        margin-left: 5px;
+        font-size: 20px;
+    }
+    #feedbackSubmit{
+        margin-top: 100px;
+    }
+
+    #gmailLogo{
+      width: 35px;
+      height: 35px;
+      font-size: 35px;
+      margin-top: 15px;
+    }
+    .gmail-text{
+      font-size: 20px;
+    }
+
+    .headline_marquee{
+      margin-bottom: 15px;
+      margin-top: 0;
+      font-size: 25px;
+      background-color: #3399ff;
+      color: white;
+      border-radius: 5px;
+    }
+    #headlineMarDiv{
+      display: flex;
+    }
+    #close{
+      margin-bottom: 15px;
+    }
+    .headline_no{
+      color: orange;
+      margin-left: 30px;
+      margin-right: 5px;
+    }
+    .Response{
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .country-nav{
+      line-height: normal;
+      height: 38px;
+      font-size: 18px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      width: 100px;
+      border-radius: 6px;
+      display: block;
+      border: 1px solid transparent;
+      background: transparent ;
+      color: #ff0080;
+      cursor: pointer;
+      padding: 8px 20px 7px 10px;
+      margin-bottom: 10px;
+      line-height: normal;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      border-radius: 2px;
+    }
+    
+    .country-nav:focus{
+      outline: none;
+    }
+    .catagory-nav{
+      line-height: normal;
+      height: 38px;
+      font-size: 18px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      width: 100px;
+      border-radius: 6px;
+      display: block;
+      border: 1px solid transparent;
+      background: transparent ;
+      color: #ff0080;
+      cursor: pointer;
+      padding: 8px 20px 7px 10px;
+      margin-bottom: 10px;
+      line-height: normal;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      border-radius: 2px;
+    }
+    
+    .catagory-nav:focus{
+      outline: none;
+    }
+
+    .selection{
+      display: flex;
+      margin-bottom: 20px;
+    }
+
+    .country-input{
+      margin: 10px;
+      max-height: 30px;
+      color: #ff0080;
+      font-weight: bold;
+    }
+    
+    .catagory-input{
+      margin: 10px;
+      max-height: 30px;
+      color: #ff0080;
+      font-weight: bold;
+    }
+
+    #closeNews{
+      margin-left: 700px;
+    }
